fix flex alignment formatting, container issue and empty experiment page

--- a/stylesheets/layout/containers.scss
+++ b/stylesheets/layout/containers.scss
@@ -20,4 +20,8 @@
     padding: 0;
   }
 
+  & + & {
+    margin-top: 1.6rem;
+  }
+
 }
