--- a/stylesheets/layout/flex.scss
+++ b/stylesheets/layout/flex.scss
@@ -27,9 +27,56 @@ $_offset: (100% / $_column-count);
 		flex-direction: column;
 	}
 
+	// columns
+	&__col {
+		@include _flex-columns;
+
+		&-auto {
+			flex: auto;
+		}
+
+		@include media-small {
+			&--s {
+				@include _flex-columns;
+			}
+		}
+
+		@include media-medium-only {
+			&--m {
+				@include _flex-columns;
+			}
+		}
+
+		@include media-large {
+			&--l {
+				@include _flex-columns;
+			}
+		}
+
+		& + & {
+			margin-left: 1.6rem;
+		}
+	}
+
+	// directions, justify and aligments.
 	@each $_direction in row, column, row-reverse, column-reverse {
 		&--#{$_direction} {
 			flex-direction: $_direction;
+		}
+
+		// TODO: can this be == row || == row-reverse instead?
+		@if $_direction == row {
+			&--#{$_direction} > &__col + &__col {
+				margin-left: 1.6rem;
+			}
+		} @else if $_direction == row-reverse {
+			&--#{$_direction} > &__col + &__col {
+				margin-left: 1.6rem;
+			}
+		} @else {
+			&--#{$_direction} > &__col + &__col {
+				margin: 1.6rem auto 0 0;
+			}
 		}
 	}
 
@@ -63,48 +110,5 @@ $_offset: (100% / $_column-count);
 				align-self: $_flow;
 			}
 		}
-	}
-
-	&__col {
-		@include _flex-columns;
-		margin: 0;
-
-		&-auto {
-			flex: auto;
-		}
-
-		@include media-small {
-			&--s {
-				@include _flex-columns;
-			}
-		}
-
-		@include media-medium-only {
-			&--m {
-				@include _flex-columns;
-			}
-		}
-
-		@include media-medium {
-			margin: 0 auto;
-		}
-
-		@include media-large {
-			&--l {
-				@include _flex-columns;
-			}
-		}
-
-		& + & {
-			margin-left: 1.6rem;
-		}
-	}
-
-	&--row > &__col + &__col {
-		margin: 0 auto 0 1.6rem;
-	}
-
-	&--column > &__col + &__col {
-		margin: 1.6rem auto 0 0;
 	}
 }
